# soul-injector

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig-rev2  sdkconfig-rev3  sdkconfig-rev5
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
main/comm/: comm_fsm.cpp  comm_fsm.hpp  comm_interface.hpp  comm_msc.cpp  comm_msc.hpp  wifi_manager.cpp  wifi_manager.hpp
main/comm/usb/: cdc_acm.cpp  cdc_acm.hpp
main/comm/usb/includes/: cdc_acm.hpp
main/driver/: button_manager.cpp  button_manager.hpp
main/driver/lcd/: disp_panel_if.hpp  display_manager.cpp  display_manager.hpp  lcd_manager.cpp  lcd_manager.hpp  lhs154kc.c  lhs154kc.h  lhs154kc_panel.cpp  lhs154kc_panel.hpp  lvgl_wrapper.c  lvgl_wrapper.h  nfp114h_panel.cpp  nfp114h_panel.hpp  nfp190b.c  nfp190b.h  nfp190b_panel.cpp  nfp190b_panel.hpp
main/misc/: config_loader.cpp
main/misc/includes/: config_loader.hpp  file_utils.hpp  json_file_reader.hpp  psram_json_allocator.hpp  psram_json_doc.hpp
main/prog/: config_manager.cpp  flash_algo_parser.cpp  local_mission_manager.cpp  manifest_manager.cpp  offline_asset_manager.cpp  offline_flasher.cpp  self_test_runner.cpp  swd_headless_flasher.cpp  swd_prog.cpp
main/prog/includes/: config_manager.hpp  flash_algo_parser.hpp  led_ctrl.hpp  local_mission_manager.hpp  manifest_manager.hpp  offline_asset_manager.hpp  offline_flasher.hpp  self_test_runner.hpp  swd_headless_flasher.hpp  swd_prog.hpp
main/ui/: ui_commander.cpp  ui_commander.hpp  ui_composer_114.cpp  ui_composer_114.hpp  ui_if.hpp  ui_producer_sm.cpp  ui_producer_sm.hpp  ui_sm_114.cpp  ui_sm_114.hpp  ui_sm_if.hpp  ui_state_machine_if.hpp
