idf_component_register(
        SRCS
            "main.cpp"
            "prog/swd_prog.cpp" "prog/includes/swd_prog.hpp"
            "prog/manifest_manager.cpp" "prog/includes/manifest_manager.hpp"
            "prog/swd_headless_flasher.cpp" "prog/includes/swd_headless_flasher.hpp"
            "prog/includes/led_ctrl.hpp"
            "misc/includes/file_utils.hpp"
            "comm/usb/cdc_acm.cpp" "comm/usb/cdc_acm.hpp"
            "comm/comm_fsm.cpp" "comm/comm_fsm.hpp"
            "comm/comm_interface.hpp"
            "misc/includes/psram_json_doc.hpp"
            "driver/includes/button_monitor.hpp"
            "driver/lcd/display_manager.cpp" "driver/lcd/display_manager.hpp"
            "driver/lcd/lhs154kc_panel.cpp" "driver/lcd/lhs154kc_panel.hpp"
            "driver/lcd/lhs154kc.c" "driver/lcd/lhs154kc.h"
            "driver/lcd/lvgl_wrapper.c" "driver/lcd/lvgl_wrapper.h"
            "driver/lcd/lcd_manager.cpp" "driver/lcd/lcd_manager.hpp"
            "driver/lcd/nfp190b_panel.cpp" "driver/lcd/nfp190b_panel.hpp"

        INCLUDE_DIRS
            "."
            "misc/includes"
            "prog/includes"
            "comm" "comm/usb"
            "driver/includes" "driver"
            "external/elfio/elfio"

        PRIV_REQUIRES
            "daplink-esp"
            "mbedtls"
            "esp_littlefs"
            "usb"
            "spi_flash"
            "efuse"
            "nvs_flash"
            "driver"
            "esp_timer"
            "lvgl"
            "led_strip"
            "lua"
            "arduino_json"
            "esp_lcd"
)
