idf_component_register(
        SRCS
            "main.cpp"
            "prog/swd_prog.cpp" "prog/includes/swd_prog.hpp"
            "prog/local_mission_manager.cpp" "prog/includes/local_mission_manager.hpp"
            "prog/swd_headless_flasher.cpp" "prog/includes/swd_headless_flasher.hpp"
            "prog/includes/led_ctrl.hpp"
            "prog/flash_algo_parser.cpp" "prog/includes/flash_algo_parser.hpp"
            "misc/includes/file_utils.hpp"
            "comm/comm_msc.cpp" "comm/comm_msc.hpp"
            "misc/includes/psram_json_doc.hpp"
            "driver/includes/button_monitor.hpp"
            "driver/lcd/display_manager.cpp" "driver/lcd/display_manager.hpp"
            "driver/lcd/lhs154kc_panel.cpp" "driver/lcd/lhs154kc_panel.hpp"
            "driver/lcd/lhs154kc.c" "driver/lcd/lhs154kc.h"
            "driver/lcd/lvgl_wrapper.c" "driver/lcd/lvgl_wrapper.h"
            "driver/lcd/lcd_manager.cpp" "driver/lcd/lcd_manager.hpp"
            "driver/lcd/nfp190b_panel.cpp" "driver/lcd/nfp190b_panel.hpp"
            "driver/lcd/nfp114h_panel.cpp" "driver/lcd/nfp114h_panel.hpp"

        INCLUDE_DIRS
            "."
            "misc/includes"
            "prog/includes"
            "comm" "comm/usb"
            "driver/includes" "driver"
            "external/elfio"

        PRIV_REQUIRES
            "daplink-esp"
            "mbedtls"
            "esp_littlefs"
            "usb"
            "spi_flash"
            "efuse"
            "nvs_flash"
            "driver"
            "esp_timer"
            "lvgl"
            "led_strip"
            "lua"
            "arduino_json"
            "esp_lcd"
            "wear_levelling"
)
