idf_component_register(
        SRCS
            "main.cpp"
            "prog/swd_prog.cpp" "prog/includes/swd_prog.hpp"
            "prog/offline_asset_manager.cpp" "prog/includes/offline_asset_manager.hpp"
            "prog/offline_flasher.cpp" "prog/includes/offline_flasher.hpp"
            "prog/includes/led_ctrl.hpp"
            "prog/flash_algo_parser.cpp" "prog/includes/flash_algo_parser.hpp"
            "misc/includes/file_utils.hpp"
            "comm/comm_msc.cpp" "comm/comm_msc.hpp"
            "misc/includes/psram_json_doc.hpp"
            "driver/button_manager.cpp" "driver/button_manager.hpp"
            "driver/lcd/display_manager.cpp" "driver/lcd/display_manager.hpp"
            "driver/lcd/lhs154kc_panel.cpp" "driver/lcd/lhs154kc_panel.hpp"
#            "driver/lcd/nfp190b_panel.cpp" "driver/lcd/nfp190b_panel.hpp"
            "driver/lcd/nfp114h_panel.cpp" "driver/lcd/nfp114h_panel.hpp"
            "ui/ui_if.hpp"
            "ui/ui_composer_114.cpp" "ui/ui_composer_114.hpp"
            "ui/ui_commander.cpp" "ui/ui_commander.hpp"

        INCLUDE_DIRS
            "."
            "misc/includes"
            "prog/includes"
            "comm" "comm/usb"
            "driver" "driver/lcd"
            "external/elfio"
            "ui"

        PRIV_REQUIRES
            "daplink-esp"
            "mbedtls"
            "esp_littlefs"
            "usb"
            "spi_flash"
            "efuse"
            "nvs_flash"
            "driver"
            "esp_timer"
            "lvgl"
            "led_strip"
            "lua"
            "arduino_json"
            "esp_lcd"
            "wear_levelling"
)
